src/test/resources/typeSystemTestModels/valid/interfaces/InterfaceInnerTypeNotNamedAsEnclosing.java
package typeSystemTestModels.valid.interfaces;

public interface InterfaceInnerTypeNotNamedAsEnclosing {

  public interface A {
    public class B{

    }

  }
}