src/test/resources/typeSystemTestModels/invalid/interfaces/InterfaceCannotDependSelf.java
package typeSystemTestModels.invalid.interfaces;

public interface InterfaceCannotDependSelf extends InterfaceCannotDependSelf {

}
